--- a/filter-popup.html
+++ b/filter-popup.html
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="popup-action">
-          <button type="button" class="primary-btn search-btn">Apply</button>
+          <button type="button" class="primary-btn">Apply</button>
         </div>
       </div>
     </div>
