--- a/index.html
+++ b/index.html
@@ -362,18 +362,13 @@
       <div class="popup">
         <div class="job-content popup-job-details">
           <div class="popup-top-content">
-            <div class="popup-job-action desktop-off">
-              <img src="assets/image/export.svg" alt="export" width="32" />
-              <img src="assets/image/copy.svg" alt="copy" width="32" />
-              <img src="assets/image/facebook.svg" alt="facebook" width="32" />
-              <img src="assets/image/linkedin.svg" alt="linkedin" width="32" />
-              <img
-                src="assets/image/cancel.svg"
-                style="margin-left: 70px"
-                alt="cancel"
-                width="32"
-              />
-            </div>
+            <img
+              src="assets/image/cancel.svg"
+              style="margin-left: 260px"
+              alt="cancel"
+              width="32"
+              class="desktop-off"
+            />
             <div class="job-heading">
               <img class="org-image" src="assets/image/org-logo.svg" alt="" />
               <div class="job-header">
@@ -417,6 +412,12 @@
                     />
                     <h3 class="detail-text">Bachelor Degree</h3>
                   </div>
+                </div>
+                <div class="popup-job-action desktop-off">
+                  <img src="assets/image/export.svg" alt="export" width="32" />
+                  <img src="assets/image/copy.svg" alt="copy" width="32" />
+                  <img src="assets/image/facebook.svg" alt="facebook" width="32" />
+                  <img src="assets/image/linkedin.svg" alt="linkedin" width="32" />
                 </div>
               </div>
             </div>
@@ -492,9 +493,10 @@
             <button type="button" class="primary-btn interested-btn">
               OK, I am interested
             </button>
-            <h5 style="text-align: center; margin-top: 15px;">
-              Click "Ok I am interested" to agree to Devcurate's Term and Service and acknowledge that
-              Devcurate's Privacy Policy applies to you 
+            <h5 style="text-align: center; margin-top: 15px">
+              Click "Ok I am interested" to agree to Devcurate's Term and
+              Service and acknowledge that Devcurate's Privacy Policy applies to
+              you
             </h5>
           </div>
 
