--- a/job-details-popup.html
+++ b/job-details-popup.html
@@ -20,20 +20,15 @@
       <div class="popup">
         <div class="job-content popup-job-details">
           <div class="popup-top-content">
-            <div class="popup-job-action">
-              <img src="assets/image/export.svg" alt="export" width="32" />
-              <img src="assets/image/copy.svg" alt="copy" width="32" />
-              <img src="assets/image/facebook.svg" alt="facebook" width="32" />
-              <img src="assets/image/linkedin.svg" alt="linkedin" width="32" />
-              <img
-                src="assets/image/cancel.svg"
-                style="margin-left: 70px"
-                alt="cancel"
-                width="32"
-              />
-            </div>
+            <img
+              src="assets/image/cancel.svg"
+              style="margin-left: 260px"
+              alt="cancel"
+              width="32"
+              class="desktop-off"
+            />
             <div class="job-heading">
-              <img src="assets/image/org-logo.svg" alt="" />
+              <img class="org-image" src="assets/image/org-logo.svg" alt="" />
               <div class="job-header">
                 <div class="job-title">
                   <h1 class="job-position">Junior UI/UX Designer</h1>
@@ -50,6 +45,38 @@
                   <div class="chip job-chip">0-2 Years</div>
                   <div class="chip job-chip">Bachelor Degree</div>
                 </div>
+                <div class="job-details">
+                  <div class="job-main-details">
+                    <img
+                      src="assets/image/loupe.svg"
+                      class="detail-icon"
+                      alt=""
+                    />
+                    <h3 class="detail-text">30 Sept, 2022</h3>
+                  </div>
+                  <div class="job-main-details">
+                    <img
+                      src="assets/image/loupe.svg"
+                      class="detail-icon"
+                      alt=""
+                    />
+                    <h3 class="detail-text">Brussels</h3>
+                  </div>
+                  <div class="job-main-details">
+                    <img
+                      src="assets/image/loupe.svg"
+                      class="detail-icon"
+                      alt=""
+                    />
+                    <h3 class="detail-text">Bachelor Degree</h3>
+                  </div>
+                </div>
+                <div class="popup-job-action desktop-off">
+                  <img src="assets/image/export.svg" alt="export" width="32" />
+                  <img src="assets/image/copy.svg" alt="copy" width="32" />
+                  <img src="assets/image/facebook.svg" alt="facebook" width="32" />
+                  <img src="assets/image/linkedin.svg" alt="linkedin" width="32" />
+                </div>
               </div>
             </div>
             <div class="popup-job-action mobile-off">
@@ -63,20 +90,6 @@
                 alt="cancel"
                 width="32"
               />
-            </div>
-          </div>
-          <div class="job-details">
-            <div class="job-main-details">
-              <img src="assets/image/loupe.svg" class="detail-icon" alt="" />
-              <h3 class="detail-text">30 Sept, 2022</h3>
-            </div>
-            <div class="job-main-details">
-              <img src="assets/image/loupe.svg" class="detail-icon" alt="" />
-              <h3 class="detail-text">Brussels</h3>
-            </div>
-            <div class="job-main-details">
-              <img src="assets/image/loupe.svg" class="detail-icon" alt="" />
-              <h3 class="detail-text">Bachelor Degree</h3>
             </div>
           </div>
         </div>
@@ -109,8 +122,8 @@
           </span>
         </div>
         <div class="popup-action">
-          <button type="button" class="primary-btn search-btn">Apply</button>
-          <button type="button" class="secondary-btn search-btn">Save</button>
+          <button type="button" class="primary-btn apply-btn">Apply</button>
+          <button type="button" class="secondary-btn save-btn">Save</button>
         </div>
       </div>
     </div>
