--- a/search-card.html
+++ b/search-card.html
@@ -21,10 +21,16 @@
       <div class="search-bar">
         <div class="input-icons">
           <img src="assets/image/loupe.svg" class="icon" alt="" />
-          <input class="input-field" type="text" placeholder="UI Designer" />
+          <input
+            class="input-field"
+            type="text"
+            placeholder="UI Designer"
+          />
         </div>
-        <button type="button" class="primary-btn search-btn">Search</button>
-        <button type="button" class="secondary-btn search-btn desktop-off">
+        <button type="button" class="primary-btn search-btn">
+          Search
+        </button>
+        <button type="button" class="secondary-btn desktop-off">
           Filter
         </button>
       </div>
