--- a/job-card.html
+++ b/job-card.html
@@ -19,7 +19,7 @@
     <div class="job-card">
       <div class="job-content">
         <div class="job-heading">
-          <img src="assets/image/org-logo.svg" alt="" />
+          <img class="org-image" src="assets/image/org-logo.svg" alt="" />
           <div class="job-header">
             <div class="job-title">
               <h1 class="job-position">Junior UI/UX Designer</h1>
@@ -36,42 +36,38 @@
               <div class="chip job-chip">0-2 Years</div>
               <div class="chip job-chip">Bachelor Degree</div>
             </div>
-          </div>
-        </div>
-        <div class="job-details">
-          <div class="job-main-details">
-            <img
-              src="assets/image/loupe.svg"
-              class="detail-icon"
-              alt=""
-            />
-            <h3 class="detail-text">30 Sept, 2022</h3>
-          </div>
-          <div class="job-main-details">
-            <img
-              src="assets/image/loupe.svg"
-              class="detail-icon"
-              alt=""
-            />
-            <h3 class="detail-text">Brussels</h3>
-          </div>
-          <div class="job-main-details">
-            <img
-              src="assets/image/loupe.svg"
-              class="detail-icon"
-              alt=""
-            />
-            <h3 class="detail-text">Bachelor Degree</h3>
+            <div class="job-details">
+              <div class="job-main-details">
+                <img
+                  src="assets/image/loupe.svg"
+                  class="detail-icon"
+                  alt=""
+                />
+                <h3 class="detail-text">30 Sept, 2022</h3>
+              </div>
+              <div class="job-main-details">
+                <img
+                  src="assets/image/loupe.svg"
+                  class="detail-icon"
+                  alt=""
+                />
+                <h3 class="detail-text">Brussels</h3>
+              </div>
+              <div class="job-main-details">
+                <img
+                  src="assets/image/loupe.svg"
+                  class="detail-icon"
+                  alt=""
+                />
+                <h3 class="detail-text">Bachelor Degree</h3>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="job-action">
-        <button type="button" class="primary-btn search-btn">
-          Apply
-        </button>
-        <button type="button" class="secondary-btn search-btn">
-          Save
-        </button>
+        <button type="button" class="primary-btn apply-btn">Apply</button>
+        <button type="button" class="secondary-btn save-btn">Save</button>
       </div>
     </div>
   </body>
