--- a/signup-popup.html
+++ b/signup-popup.html
@@ -19,60 +19,65 @@
     <div id="popup2" class="overlay">
       <div class="popup">
         <div class="signup-popup">
-          <!-- <div class="info-content">
-              <div class="info-icon">
-                <img src="assets/image/info.svg" width="100" alt="info" />
-              </div>
-              <h2>CREATE A FREE ORG ACCOUNT</h2>
-              <ul>
-                <li>
-                  You can post unlimited job openings 100% for free - no strings
-                  attached!
-                </li>
-                <li>
-                  You can also make use of Easy Apply to promote job openings and
-                  accept applications, all in one place!
-                </li>
-              </ul>
-              <button type="button" class="primary-btn interested-btn">
-                OK, I am interested
-              </button>
-            </div> -->
+          <div class="info-content">
+            <div class="info-icon">
+              <img src="assets/image/info.svg" width="100" alt="info" />
+            </div>
+            <h2>CREATE A FREE ORG ACCOUNT</h2>
+            <ul>
+              <li>
+                You can post unlimited job openings 100% for free - no strings
+                attached!
+              </li>
+              <li>
+                You can also make use of Easy Apply to promote job openings and
+                accept applications, all in one place!
+              </li>
+            </ul>
+            <button type="button" class="primary-btn interested-btn">
+              OK, I am interested
+            </button>
+            <h5 style="text-align: center; margin-top: 15px">
+              Click "Ok I am interested" to agree to Devcurate's Term and
+              Service and acknowledge that Devcurate's Privacy Policy applies to
+              you
+            </h5>
+          </div>
 
           <!-- <div class="account-form">
-              <h2>CREATE A FREE ORG ACCOUNT</h2>
-              <div class="input-container">
-                <h5>Name of organisation</h5>
-                <input type="text" placeholder="Enter your organisation name" />
+            <h2>CREATE A FREE ORG ACCOUNT</h2>
+            <div class="input-container">
+              <h5>Name of organisation</h5>
+              <input type="text" placeholder="Enter your organisation name" />
+            </div>
+            <div class="side-field">
+              <div class="input-container first-field">
+                <h5>First Name</h5>
+                <input type="text" placeholder="Enter your first name" />
               </div>
-              <div class="side-field">
-                <div class="input-container first-field">
-                  <h5>First Name</h5>
-                  <input type="text" placeholder="Enter your first name" />
-                </div>
-                <div class="input-container last-field">
-                  <h5>Last Name</h5>
-                  <input type="text" placeholder="Enter your last name" />
-                </div>
+              <div class="input-container last-field">
+                <h5>Last Name</h5>
+                <input type="text" placeholder="Enter your last name" />
               </div>
-              <div class="input-container">
-                <h5>Work Email</h5>
-                <input type="text" placeholder="Enter your work email" />
-              </div>
-              <div class="input-container">
-                <h5>Password</h5>
-                <input type="text" placeholder="Enter your password" />
-              </div>
-              <div class="input-container">
-                <h5>Confirm Password</h5>
-                <input type="text" placeholder="Enter your confirm password" />
-              </div>
-              <button type="button" class="primary-btn signup-btn">
-                Sign up
-              </button>
-            </div> -->
+            </div>
+            <div class="input-container">
+              <h5>Work Email</h5>
+              <input type="text" placeholder="Enter your work email" />
+            </div>
+            <div class="input-container">
+              <h5>Password</h5>
+              <input type="text" placeholder="Enter your password" />
+            </div>
+            <div class="input-container">
+              <h5>Confirm Password</h5>
+              <input type="text" placeholder="Enter your confirm password" />
+            </div>
+            <button type="button" class="primary-btn signup-btn">
+              Sign up
+            </button>
+          </div> -->
 
-          <div class="success-content">
+          <!-- <div class="success-content">
             <div class="success-icon">
               <img src="assets/image/correct.svg" width="100" alt="info" />
             </div>
@@ -88,7 +93,7 @@
               Login with the email and password you used just now to create an
               account when redirected to the dashboard!
             </h5>
-          </div>
+          </div> -->
           <div class="signup-banner mobile-off">
             <img src="assets/image/signup-banner.svg" width="100%" alt="" />
           </div>
